- replaced var with explicit type - used java 8 compatible methods - removed module-info.java in different modules